# KPRS-voting-website

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  plan.md
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/api/: Dockerfile
backend/api/src/: db.rs  main.rs  middleware.rs  rdb.rs  util.rs
backend/redis/: Dockerfile  redis.conf.template
backend/src/: db.rs  main.rs
backend/src/data/: voter.rs
frontend/: .dockerignore  .env.example  Dockerfile  README  docker-compose.yml  nginx.conf  nginx.conf.template  package.json  plan.md  vite.config.ts
frontend/src/: App.svelte
frontend/src/lib/: api.ts  livews.ts  types.ts  util.ts
frontend/src/routes/: AdminDashboard.svelte  AdminGate.svelte  Gate.svelte  Logout.svelte  Thanks.svelte  Vote.svelte
frontend/src/styles/: app.css
src/: App.svelte  db.rs  lib.rs  main.rs  util.rs
src/components/admin-dashboard/: VotesGraph.svelte
src/components/admin-gate/: AdminGateForm.svelte
src/components/gate/: GateForm.svelte
src/components/home/: HomeNavbar.svelte
src/components/vote/: CandidateCard.svelte  VoteNavbar.svelte
src/data/: candidate.rs  mod.rs  user.rs  vote.rs  voter.rs
src/lib/: api.ts  types.ts  userdata.ts
src/lib/hooks/: useStats.ts  useUserdata.ts
src/routes/: Logout.svelte  Vote.svelte
src/routes/admin/: mod.rs  reset.rs  token.rs  votes.rs
src/routes/user/: get.rs  reset.rs  vote.rs
src/routes/voter/: get.rs  vote.rs
src/styles/: app.css
(+30 files in other folders)
